Bug 140293 - first start under windows to startcenter fails
Summary: first start under windows to startcenter fails
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-09 14:55 UTC by Caolán McNamara
Modified: 2024-01-21 20:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
windows backtrace (2.43 KB, text/plain)
2021-02-09 14:55 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2021-02-09 14:55:13 UTC
Description:
first start under windows (to launch startcenter) fails

Steps to Reproduce:
1. rm -rf instdir/user
2. ./instdir/program/soffice.exe

Actual Results:
blank gray window appear
then it resizes to change its height a little
new area is black
then it exits

Expected Results:
sucess


Reproducible: Always


User Profile Reset: No



Additional Info:
if launched with --writer it works, if writer is closed to return to startcenter, that works, subsequent launches work ok

autogen.input contains --enable-debug
Comment 1 Caolán McNamara 2021-02-09 14:55:38 UTC
Created attachment 169623 [details]
windows backtrace
Comment 2 Caolán McNamara 2021-02-09 14:56:39 UTC
I suspect

commit d3b498cc4732f964919fecb265085cefcc422469
Date:   Sun Feb 7 16:34:38 2021 +0100

    invoke idle priority timers only when actually idle

is related to this
Comment 3 Commit Notification 2021-02-11 10:07:33 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/843af72bcc9047867588e29c8e10b84a5e58d70e

make win32 variant AnyInput() not deliver events (tdf#140293)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.