make win32 variant AnyInput() not deliver events (tdf#140293)

Win32 API PeekMessage() actually may deliver events, despite
what the name may suggest, even with PM_NOREMOVE argument.
That means this is problematic for use in AnyInput(), as that
function should just check the event queue but not do anything
with it. Using GetQueueStatus() should solve the problem.

See https://lists.freedesktop.org/archives/libreoffice/2021-February/086788.html
for further details.

Change-Id: I10d3423f89f6f050534625110113dee60959f7a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110718
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
Tested-by: Jenkins